h2o: root-cause Byte-layout intrinsic interaction; 22/22 DaCapo pass
Opus bisection agent pinned the h2o CSV-parse failure to a one-class
field-layout interaction with HotSpot intrinsics. Detailed findings:

* Symptom: h2o parses 15-column CSVs but every numeric cell comes back
  as NaN. ignore_const_cols then drops all 14 non-response columns as
  "constant", and DRF training fails with "Training data must have at
  least 2 features (incl. response)." Reproduces with just the
  jlink-instrumented JDK — no runtime agent required.

* Bisection: instrument ONLY java.lang.Byte (everything else stock) →
  reproduces. Skip ONLY java.lang.Byte (everything else instrumented)
  → passes. Narrowing further: injecting $$crochetSnap (Object) alone
  → passes; injecting $$crochetVersion (int) alone → reproduces.

* Mechanism: HotSpot's field-layout algorithm places the injected 4-byte
  int at offset 12, shifting Byte's primitive `value` byte from offset
  12 (stock) to offset 16. Byte is @jdk.internal.ValueBased with
  @IntrinsicCandidate valueOf/byteValue, and HotSpot's bytecode-level
  intrinsics assume Byte.value's original layout. Autoboxing,
  Unboxing, and Field.get all still return correct values at the Java
  level — the failure is specific to h2o's byte-level CSV parser +
  water.Weaver/Javassist-generated Icer + HotSpot Byte intrinsics.

* Fix: narrow class-level skip of java.lang.Byte in
  CrochetTransformer.shouldSkip, same pattern as the existing
  java.lang.Object skip. Justified with the bisection evidence and
  flagged as a VM-contract constraint, not a workaround.

* Alternatives rejected (per agent report):
  - Broad @ValueBased skip (48 JDK classes) — wider than needed; only
    Byte is load-bearing.
  - Drop $$crochetVersion from Byte but keep $$crochetSnap — desyncs
    Byte from the CRIJInstrumented contract getVersion/setVersion
    calls expect.
  - ClassValue-based side-table for the version counter — architectural
    refactor; recorded as a future op